@@ -738,6 +738,14 @@
 	'S_USEIPMI'=>				'Use IPMI',
 	'S_IPMI_IP_ADDRESS'=>			'IPMI IP address',
 	'S_IPMI_PORT'=>				'IPMI port',
+	'S_IPMI_AUTHTYPE'=>			'IPMI authentication algorithm',
+	'S_AUTHTYPE_DEFAULT'=>			'Default',
+	'S_AUTHTYPE_NONE'=>			'None',
+	'S_AUTHTYPE_MD2'=>			'MD2',
+	'S_AUTHTYPE_MD5'=>			'MD5',
+	'S_AUTHTYPE_STRAIGHT'=>			'Straight',
+	'S_AUTHTYPE_OEM'=>			'OEM',
+	'S_AUTHTYPE_RMCP_PLUS'=>		'RMCP+',
 	'S_IPMI_PRIVILEGE'=>			'IPMI privilege level',
 	'S_PRIVILEGE_CALLBACK'=>		'Callback',
 	'S_PRIVILEGE_USER'=>			'User',
