@@ -1,5 +1,6 @@
 Changes for 1.6.1
 
+ - [ZBX-576] added IPMI authentication algorithms (Sasha)
  - [ZBX-573] made SQL optimization for PGSQL (Artem)
  - [ZBX-572] fixed warning messages while updating template linkage (Sasha)
  - [ZBX-570] fixed possible server crash if flexible interval delay is 0 sec. (Sasha)
